updated contact info

--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
+<!DOCTYPE html>
+
 <html>
 	<head>
-		<link rel="stylesheet" href="interface.css"></link>
+		<link rel="stylesheet" href="interface.css">
 	</head>
 	
 	<body>
